--- a/app/src/main/res/layout/activity_thankyou_donor_page.xml
+++ b/app/src/main/res/layout/activity_thankyou_donor_page.xml
@@ -35,7 +35,7 @@
         tools:text="We will not send you any requests until you are eligible to donate again in 3 months" />
 
     <Button
-        android:id="@+id/buttonMain"
+        android:id="@+id/buttonProfile"
         android:layout_width="184dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -45,6 +45,6 @@
         android:layout_marginStart="109dp"
         android:layout_marginLeft="109dp"
         android:layout_marginBottom="165dp"
-        android:text="Back to Main Menu"
-        tools:text="Back to Main Menu" />
+        android:text="Back to Profile"
+        tools:text="Back to Profile" />
 </RelativeLayout>
