--- a/app/src/main/res/layout/activity_donor_message_page.xml
+++ b/app/src/main/res/layout/activity_donor_message_page.xml
@@ -7,11 +7,11 @@
     tools:context=".DonorMessagePage">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="330dp"
-        android:layout_height="324dp"
+        android:layout_width="343dp"
+        android:layout_height="255dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
+        android:layout_marginBottom="126dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="133dp" />
 
@@ -28,4 +28,17 @@
         android:textStyle="bold"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="23dp" />
+
+    <Button
+        android:id="@+id/buttonReturnRequest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="111dp"
+        android:layout_marginRight="111dp"
+        android:layout_marginBottom="56dp"
+        android:text="Return to Request"
+        tools:text="Return to Request" />
 </RelativeLayout>
