--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/editText13"
+        android:id="@+id/editTextConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
@@ -16,7 +16,35 @@
         android:layout_marginBottom="-334dp"
         android:layout_toEndOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_marginLeft="-1dp"
+        android:layout_toRightOf="@+id/textView9" />
+
+    <Spinner
+        android:id="@+id/spinnerGender"
+        android:layout_width="218dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editTextAge"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="128dp"
+        android:layout_marginBottom="0dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="128dp" />
+
+    <Spinner
+        android:id="@+id/spinnerBloodType"
+        android:layout_width="218dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editTextAge"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="129dp"
+        android:layout_marginBottom="-96dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="129dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -129,7 +157,7 @@
         android:text="E-Mail" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/editTextName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
@@ -137,10 +165,12 @@
         android:layout_marginBottom="-2dp"
         android:layout_toEndOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_toRightOf="@+id/textView9"
+        android:layout_marginLeft="-3dp" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/editTextPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
@@ -148,54 +178,40 @@
         android:layout_marginBottom="-284dp"
         android:layout_toEndOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_toRightOf="@+id/textView9"
+        android:layout_marginLeft="1dp" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/editTextEMail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
         android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginBottom="-237dp"
         android:layout_toEndOf="@+id/textView9"
+        android:layout_toRightOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:hint="chicken@gmail.com"
+        android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editText9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_marginStart="-1dp"
-        android:layout_marginBottom="-191dp"
-        android:layout_toEndOf="@+id/textView9"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editText10"
+        android:id="@+id/editTextAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
         android:layout_marginStart="-2dp"
+        android:layout_marginLeft="-2dp"
         android:layout_marginBottom="-144dp"
         android:layout_toEndOf="@+id/textView9"
+        android:layout_toRightOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:hint="25"
+        android:inputType="number|numberDecimal" />
 
     <EditText
-        android:id="@+id/editText11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="-95dp"
-        android:layout_toEndOf="@+id/textView9"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editText12"
+        android:id="@+id/editTextLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView7"
@@ -203,15 +219,20 @@
         android:layout_marginBottom="-47dp"
         android:layout_toEndOf="@+id/textView9"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_marginLeft="-3dp"
+        android:layout_toRightOf="@+id/textView9" />
 
     <Button
         android:id="@+id/buttonNext"
-        android:layout_width="wrap_content"
+        android:layout_width="342dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editText7"
+        android:layout_alignLeft="@+id/editText7"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="10dp"
-        android:text="Next" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="13dp"
+        android:text="Next"
+        tools:ignore="UnknownId" />
 </RelativeLayout>
