--- a/app/src/main/res/layout/activity_donor_profile_page.xml
+++ b/app/src/main/res/layout/activity_donor_profile_page.xml
@@ -154,6 +154,7 @@
         tools:text="count" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleViewDonorProfile"
         android:layout_width="339dp"
         android:layout_height="167dp"
         android:layout_alignParentStart="true"
@@ -209,35 +210,5 @@
         android:layout_marginBottom="205dp"
         android:text="Emergency Donations"
         android:textSize="14sp" />
-
-    <Button
-        android:id="@+id/buttonDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_marginTop="87dp"
-        android:layout_marginEnd="-64dp"
-        android:text="Delete" />
-
-    <Button
-        android:id="@+id/buttonDelete2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_marginTop="137dp"
-        android:layout_marginEnd="-64dp"
-        android:text="Delete" />
-
-    <Button
-        android:id="@+id/buttonDelete3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignEnd="@+id/textView2"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="-65dp"
-        android:text="Delete" />
 
 </RelativeLayout>
