--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -47,7 +47,7 @@
         android:layout_marginLeft="129dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewRequest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -59,7 +59,7 @@
         android:text="Blood Type" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
