--- a/app/src/main/res/layout/activity_donor_profile_page.xml
+++ b/app/src/main/res/layout/activity_donor_profile_page.xml
@@ -48,7 +48,7 @@
         android:id="@+id/textViewGenDonation2"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView3"
+        android:layout_alignTop="@+id/textViewRequest"
         android:layout_marginStart="0dp"
         android:layout_marginTop="36dp"
         android:layout_toEndOf="@+id/textView7"
@@ -117,7 +117,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewRequest"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -130,7 +130,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewLocation"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -146,7 +146,7 @@
         android:id="@+id/textViewGenDonation"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView3"
+        android:layout_alignTop="@+id/textViewRequest"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/textView7"
