--- a/app/src/main/res/layout/activity_request_dashboard.xml
+++ b/app/src/main/res/layout/activity_request_dashboard.xml
@@ -6,33 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".RequestDashboard">
 
-    <Button
-        android:id="@+id/buttonCant2"
-        android:layout_width="74dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@+id/buttonAccept1"
-        android:layout_alignLeft="@+id/buttonAccept1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginBottom="139dp"
-        android:background="@android:color/darker_gray"
-        android:text="I Can't" />
 
-    <Button
-        android:id="@+id/buttonCant1"
-        android:layout_width="74dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="3dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginRight="49dp"
-        android:background="@android:color/darker_gray"
-        android:text="i can't"
-        android:layout_marginLeft="3dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -62,70 +36,14 @@
         android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="131dp"
-        android:text="Request 1"
-        android:textSize="18sp"
-        android:layout_alignLeft="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="108dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:text="Location"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_alignStart="@+id/textView4"
-        android:text="Posting Time"
-        android:textSize="18sp"
-        android:layout_alignLeft="@+id/textView4" />
-
-    <Button
-        android:id="@+id/buttonAccept1"
-        android:layout_width="74dp"
-        android:layout_height="35dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="203dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:background="@android:color/holo_green_light"
-        android:text="accept"
-        android:layout_marginLeft="3dp" />
-
-    <Button
-        android:id="@+id/buttonAccept2"
-        android:layout_width="74dp"
-        android:layout_height="35dp"
-        android:layout_alignStart="@+id/buttonAccept1"
-        android:layout_alignLeft="@+id/buttonAccept1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginBottom="177dp"
-        android:background="@android:color/holo_green_light"
-        android:text="accept" />
-
     <android.support.v7.widget.RecyclerView
-        android:layout_width="90dp"
-        android:layout_height="311dp"
-        android:layout_below="@+id/buttonCant1"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_marginStart="-115dp"
-        android:layout_marginTop="-74dp" />
+        android:id="@+id/recyclerview"
+        android:layout_width="279dp"
+        android:layout_height="283dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="136dp" />
+
 
 </RelativeLayout>
