--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -21,31 +21,29 @@
 
     <TextView
         android:id="@+id/textViewLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textViewRequest"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="-9dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginRight="153dp"
+        android:layout_width="135dp"
+        android:layout_height="46dp"
+        android:layout_alignBottom="@+id/textViewRequest"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
         android:text="Location"
-        android:textSize="18sp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textViewposting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewRequest"
-        android:layout_alignStart="@+id/textViewLocation"
-        android:layout_alignLeft="@+id/textViewLocation"
-        android:layout_marginStart="-10dp"
-        android:layout_marginLeft="-10dp"
-        android:layout_marginTop="-1dp"
+        android:layout_alignBottom="@+id/buttonCant"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
         android:text="Posting Time"
-        android:textSize="18sp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/buttonCant"
@@ -65,13 +63,14 @@
 
     <TextView
         android:id="@+id/textViewRequest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="24dp"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="30dp"
         android:text="Request "
-        android:textSize="18sp"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:textSize="18sp" />
 </RelativeLayout>
