--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="17dp"
         android:layout_marginLeft="17dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/holo_red_dark"
         android:text="New Emergency Request"
         android:textColor="@android:color/background_light"
@@ -24,7 +24,7 @@
         tools:layout_editor_absoluteY="29dp" />
 
     <Button
-        android:id="@+id/buttonNewDonation"
+        android:id="@+id/buttonDonationHomePage"
         android:layout_width="159dp"
         android:layout_height="73dp"
         android:layout_alignBottom="@+id/buttonNewRequest"
@@ -34,7 +34,7 @@
         android:layout_marginRight="17dp"
         android:layout_marginBottom="0dp"
         android:background="@android:color/holo_green_dark"
-        android:text="New Donation"
+        android:text="Donation Homepage"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="207dp"
@@ -50,8 +50,8 @@
         android:layout_marginStart="98dp"
         android:layout_marginLeft="98dp"
         android:layout_marginTop="117dp"
-        android:text="3 People need your help!"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:text="3 People need your help!" />
 
     <Button
         android:id="@+id/buttonCurrentRequest"
@@ -80,6 +80,18 @@
         android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/textViewAccept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/buttonCurrentRequest"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="402dp"
+        android:text="Requests You Have Accepted"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp" />
+
     <View
         android:id="@+id/divider3"
         android:layout_width="match_parent"
@@ -90,35 +102,18 @@
         android:background="?android:attr/listDivider"
         android:visibility="visible" />
 
-    <Switch
-        android:id="@+id/switchItem1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonCancelItem1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="33dp"
-        android:layout_marginRight="33dp" />
-
-    <Switch
-        android:id="@+id/switchItem2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="34dp"
-        android:layout_marginRight="34dp"
-        android:layout_marginBottom="166dp" />
-
     <android.support.v7.widget.RecyclerView
-        android:layout_width="85dp"
-        android:layout_height="162dp"
-        android:layout_alignTop="@+id/switchItem2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="34dp"
-        android:layout_marginLeft="34dp"
-        android:layout_marginTop="-32dp" />
+        android:layout_width="350dp"
+        android:layout_height="132dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="260dp" />
+
+    <TextView
+        android:id="@+id/textViewRequestAccept"
+        android:layout_width="350dp"
+        android:layout_height="67dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="430dp"
+        android:text="TextView" />
 
 </RelativeLayout>
