--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -103,6 +103,7 @@
         android:visibility="visible" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="350dp"
         android:layout_height="132dp"
         android:layout_marginLeft="17dp"
