--- a/app/src/main/res/layout/activity_request_status_page.xml
+++ b/app/src/main/res/layout/activity_request_status_page.xml
@@ -6,50 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".RequestStatusPage">
 
+    <Button
+        android:id="@+id/buttonExtendRequest"
+        android:layout_width="305dp"
+        android:layout_height="44dp"
+        android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="105dp"
+        android:background="@color/colorPrimary"
+        android:text="Extend Request"
+        android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="388dp" />
+
+    <Button
+        android:id="@+id/buttonReturnHome"
+        android:layout_width="305dp"
+        android:layout_height="44dp"
+        android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/darker_gray"
+        android:text="Return Home"
+        android:textColor="@android:color/background_light"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="388dp" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewPeopleNotified"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="-124dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="-119dp"
         android:text="Real Time Request Result"
         android:textSize="30sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="34dp"
-        android:layout_marginLeft="11dp"
-        android:layout_alignParentLeft="true" />
+        tools:layout_editor_absoluteY="34dp" />
 
     <TextView
         android:id="@+id/textViewPeopleNotified"
         android:layout_width="75dp"
         android:layout_height="57dp"
         android:layout_alignStart="@+id/textViewPeopleDonated2"
+        android:layout_alignLeft="@+id/textViewPeopleDonated2"
         android:layout_alignParentTop="true"
         android:layout_marginStart="-2dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginTop="92dp"
         android:text="32"
         android:textColor="@color/design_default_color_primary"
         android:textSize="36sp"
         tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="103dp"
-        android:layout_alignLeft="@+id/textViewPeopleDonated2"
-        android:layout_marginLeft="-2dp" />
+        tools:layout_editor_absoluteY="103dp" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textViewPeopleNotified"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_toEndOf="@+id/textViewPeopleNotified"
+        android:layout_toRightOf="@+id/textViewPeopleNotified"
         android:text="Notified"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="183dp"
-        tools:layout_editor_absoluteY="119dp"
-        android:layout_toRightOf="@+id/textViewPeopleNotified" />
+        tools:layout_editor_absoluteY="119dp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -57,61 +87,62 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textViewPeopleAccepted"
         android:layout_marginStart="-3dp"
+        android:layout_marginLeft="-3dp"
         android:layout_toEndOf="@+id/textViewPeopleAccepted"
+        android:layout_toRightOf="@+id/textViewPeopleAccepted"
         android:text="Accepted"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="183dp"
-        tools:layout_editor_absoluteY="181dp"
-        android:layout_marginLeft="-3dp"
-        android:layout_toRightOf="@+id/textViewPeopleAccepted" />
+        tools:layout_editor_absoluteY="181dp" />
 
     <TextView
         android:id="@+id/textViewPeopleDonated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/buttonRefresh"
+        android:layout_alignRight="@+id/buttonRefresh"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="223dp"
+        android:layout_marginTop="211dp"
         android:layout_marginEnd="47dp"
+        android:layout_marginRight="47dp"
         android:text="(0 have donated before)"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="225dp"
-        android:layout_alignRight="@+id/buttonRefresh" />
+        tools:layout_editor_absoluteY="225dp" />
 
     <TextView
         android:id="@+id/textViewPeopleDonated2"
         android:layout_width="259dp"
         android:layout_height="48dp"
         android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_alignLeft="@+id/buttonRefresh"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="218dp"
         android:text="Please be patient while we connect to more people"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="267dp"
-        android:layout_alignLeft="@+id/buttonRefresh"
-        android:layout_marginLeft="52dp" />
+        tools:layout_editor_absoluteY="267dp" />
 
     <TextView
         android:id="@+id/textViewPeopleAccepted"
         android:layout_width="75dp"
         android:layout_height="53dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-74dp"
-        android:layout_marginTop="169dp"
+        android:layout_marginStart="-72dp"
+        android:layout_marginLeft="-72dp"
+        android:layout_marginTop="158dp"
         android:layout_toEndOf="@+id/textViewPeopleNotified"
+        android:layout_toRightOf="@+id/textViewPeopleNotified"
         android:text="0"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="36sp"
         tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="172dp"
-        android:layout_marginLeft="-74dp"
-        android:layout_toRightOf="@+id/textViewPeopleNotified" />
+        tools:layout_editor_absoluteY="172dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -120,12 +151,12 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textViewPeopleDonated2"
         android:layout_alignEnd="@+id/textViewPeopleNotified"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="78dp"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="267dp"
         android:layout_alignRight="@+id/textViewPeopleNotified"
-        android:layout_marginRight="78dp" />
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="267dp" />
 
     <Button
         android:id="@+id/buttonRefresh"
@@ -133,7 +164,7 @@
         android:layout_height="44dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="128dp"
+        android:layout_marginBottom="153dp"
         android:background="@android:color/holo_green_dark"
         android:text="Refresh Button"
         android:textColor="@android:color/background_light"
@@ -144,13 +175,25 @@
         android:id="@+id/buttonCloseRequest"
         android:layout_width="305dp"
         android:layout_height="44dp"
+        android:layout_alignStart="@+id/buttonRefresh"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="58dp"
-        android:background="@android:color/darker_gray"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="57dp"
+        android:background="@color/colorAccent"
         android:text="Close Request"
         android:textColor="@android:color/background_light"
         tools:layout_editor_absoluteX="40dp"
         tools:layout_editor_absoluteY="388dp" />
+
+    <Button
+        android:id="@+id/buttonPm"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/textView6"
+        android:layout_alignEnd="@+id/textViewPeopleDonated2"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/pmicon"
+        android:text="" />
 
 </RelativeLayout>
