--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -110,11 +110,25 @@
         android:layout_marginTop="260dp" />
 
     <TextView
-        android:id="@+id/textViewRequestAccept"
-        android:layout_width="350dp"
-        android:layout_height="67dp"
+        android:id="@+id/textViewAcptCount"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginLeft="17dp"
         android:layout_marginTop="430dp"
-        android:text="TextView" />
+        android:gravity="center_vertical|center_horizontal"
+        android:text="1"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewAcptDetail"
+        android:layout_width="280dp"
+        android:layout_height="75dp"
+        android:layout_alignStart="@+id/textViewAcptCount"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="430dp"
+
+        android:gravity="center_vertical|center_horizontal"
+        android:text="Accept Detail"
+        android:textSize="18sp" />
 
 </RelativeLayout>
