--- a/app/src/main/res/layout/activity_request_dashboard.xml
+++ b/app/src/main/res/layout/activity_request_dashboard.xml
@@ -7,6 +7,19 @@
     tools:context=".RequestDashboard">
 
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="317dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="84dp"
+        android:text="You have agreed to fill this request"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -15,9 +28,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginLeft="51dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginLeft="66dp"
+        android:layout_marginTop="23dp"
         android:text="Emergency Requests"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -29,21 +42,50 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="84dp"
-        android:text="You have agreed to fill this request"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="238dp"
+        android:text="Active Request"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_width="279dp"
-        android:layout_height="283dp"
+        android:layout_width="359dp"
+        android:layout_height="233dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="136dp" />
+        android:layout_marginTop="269dp" />
+
+    <TextView
+        android:id="@+id/textViewAcptCount"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="123dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="1"
+        android:textColor="@android:color/background_dark"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewAcptDetail"
+        android:layout_width="270dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="103dp"
+        android:layout_marginLeft="103dp"
+        android:layout_marginTop="123dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        tools:text="Accept Detail" />
 
 
 </RelativeLayout>
