--- a/app/src/main/res/layout/activity_donor_profile_page.xml
+++ b/app/src/main/res/layout/activity_donor_profile_page.xml
@@ -143,13 +143,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleViewDonorProfile"
         android:layout_width="340dp"
-        android:layout_height="219dp"
+        android:layout_height="360dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
-        android:layout_marginBottom="17dp" />
+        android:layout_marginTop="275dp" />
 
     <ImageView
         android:id="@+id/imageView7"
