--- a/app/src/main/res/layout/activity_request_dashboard.xml
+++ b/app/src/main/res/layout/activity_request_dashboard.xml
@@ -61,34 +61,31 @@
         android:layout_marginLeft="14dp" />
 
     <TextView
-        android:id="@+id/textViewAcptCount"
-        android:layout_width="80dp"
+        android:id="@+id/textViewAcptDetail"
+        android:layout_width="260dp"
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
         android:layout_marginLeft="14dp"
-        android:layout_marginTop="123dp"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="1"
-        android:textColor="@android:color/background_dark"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/textViewAcptDetail"
-        android:layout_width="270dp"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="103dp"
-        android:layout_marginLeft="103dp"
-        android:layout_marginTop="123dp"
-        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="120dp"
+        android:gravity="center_vertical"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         tools:text="Accept Detail" />
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:text="Cancel" />
 
 
 </RelativeLayout>
